// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha;

option java_package = "org.wfanet.measurement.api.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "AccountProto";

// An API user account resource.
message Account {
  message Key {
    // ID of this `Account` resource. If absent, it implies the ID of the
    // `Account` that matches the authenticated user.
    string account_id = 1;
  }
  // Resource key.
  Key key = 1;

  // OpenID Connect identity.
  message OpenIdConnectIdentity {
    // Issuer (`iss` claim value). Required.
    string issuer = 1;

    // Subject Identifier (`subj` claim value). Required.
    string subject = 2;
  }

  // Identity of the user for this `Account`. Required.
  //
  // This value is unique across all `Account` resources.
  oneof identity {
    OpenIdConnectIdentity open_id = 2;
  }
}
